--- a/Levantamento de Perdas/Src/Tela_Inicial_Producao.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Inicial_Producao.fx.yaml
@@ -109,6 +109,10 @@
                         Ascending
                     )
                 )
+            ,
+            Filter(
+                        LancamentoProducao,
+                        (ComboBoxmaquina.Selected.Result = Blank()) || (MAQUINA = ComboBoxmaquina.Selected.Result))
             )
             
             
