--- a/Levantamento de Perdas/Src/Tela_Inicial_Producao.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Inicial_Producao.fx.yaml
@@ -112,9 +112,9 @@
             ,
             Filter(
                         LancamentoProducao,
-                        (ComboBoxmaquina.Selected.Result = Blank()) || (MAQUINA = ComboBoxmaquina.Selected.Result))
+                        (StartsWith(MAQUINA , Text(ComboBoxmaquina.Selected.Result)))
             )
-            
+            )
             
             
             
