--- a/Levantamento de Perdas/Src/Tela_Inicial_Producao.fx.yaml
+++ b/Levantamento de Perdas/Src/Tela_Inicial_Producao.fx.yaml
@@ -51,6 +51,7 @@
         PaddingTop: =22
         TabIndex: =0
         Tooltip: =If(SortDescending1, "Classificar lista em ordem alfabética inversa", "Classificar lista em ordem alfabética")
+        Visible: =If(varDataCount < varDelegationLimit , false , true)
         Width: =80
         X: =Parent.Width - IconNewItem1.Width - Self.Width
         ZIndex: =4
@@ -96,11 +97,25 @@
         FocusedBorderColor: =
         Height: =856
         Items: |-
-            =LancamentoProducao
-            
-            // If(varDataCount<varDelegationLimit;SortByColumns(Filter(LancamentoProducao;(ComboBoxmaquina.Selected.Result=Blank())||(MAQUINA=ComboBoxmaquina.Selected.Result));"HORA_INICIO";If(SortDescending1;Descending;Ascending));Filter(LancamentoProducao;(StartsWith(MAQUINA;Text(ComboBoxmaquina.Selected.Result)))))
-            
-            
+            =If(
+                varDataCount < varDelegationLimit,
+                SortByColumns(
+                    Filter(
+                        LancamentoProducao,
+                        ((UTE = ComboBoxute.Selected.Result) || ComboBoxute.Selected.Result = Blank()) && ((MAQUINA = ComboBoxmaquina.Selected.Result) || ComboBoxmaquina.Selected.Result = Blank()) && ((DATA = txt_date_prod.Text) || txt_date_prod.Text = Blank())
+                    ),
+                    "HORA_INICIO",
+                    If(
+                        SortDescending1,
+                        Descending,
+                        Ascending
+                    )
+                ),
+                Filter(
+                    LancamentoProducao,
+                    ((UTE = ComboBoxute.Selected.Result) || ComboBoxute.Selected.Result = Blank()) && ((MAQUINA = ComboBoxmaquina.Selected.Result) || ComboBoxmaquina.Selected.Result = Blank()) && ((DATA = txt_date_prod.Text) || txt_date_prod.Text = Blank())
+                )
+            )
             // SortByColumns(Filter(LancamentoProducao;(IsBlank(Text(ComboBoxmaquina.Selected.Result)))||(ComboBoxmaquina.Selected.Result=MAQUINA)&&(IsBlank(Text(ComboBoxute.Selected.Result))||ComboBoxute.Selected.Result=UTE)&&(IsBlank(Text(ComboBoxdata.Selected.Result))||ComboBoxdata.Selected.Result=DATA));"HORA_INICIO";If(SortDescending1;Descending;Ascending))
         Layout: =Layout.Vertical
         NavigationStep: =2
@@ -269,25 +284,9 @@
         SelectMultiple: =false
         Size: =21
         Width: =250
-        X: =ComboBoxute.X + ComboBoxute.Width + 1
+        X: =ComboBoxute.X + ComboBoxute.Width + 2
         Y: =ComboBoxute.Y
         ZIndex: =11
-
-    ComboBoxdata As combobox:
-        DisplayFields: =["Result"]
-        Height: =70
-        InputTextPlaceholder: ="DATA"
-        Items: =Distinct( DatasPowerapps , Datas ).Result
-        NoSelectionText: ="DATA"
-        SearchFields: =["Result"]
-        SearchItems: =Search(Distinct( DatasPowerapps , Datas ).Result,ComboBoxdata.SearchText,"Result")
-        SelectMultiple: =false
-        Size: =21
-        Width: =225
-        X: |
-            =ComboBoxmaquina.X + ComboBoxmaquina.Width + 1
-        Y: =ComboBoxmaquina.Y
-        ZIndex: =12
 
     Icon1 As icon.Home:
         BorderColor: =RGBA(255, 255, 255, 1)
@@ -323,7 +322,7 @@
         Color: =RGBA(255, 255, 255, 1)
         Height: =88
         Icon: =Icon.Erase
-        OnSelect: =Reset(ComboBoxdata) ; Reset(ComboBoxmaquina) ; Reset(ComboBoxute)
+        OnSelect: =Reset(DatePickerProd) ; Reset(ComboBoxmaquina) ; Reset(ComboBoxute)
         PaddingBottom: =22
         PaddingLeft: =22
         PaddingRight: =22
@@ -487,4 +486,26 @@
         X: =375
         Y: =1091
         ZIndex: =17
+
+    txt_date_prod As label:
+        Height: =64
+        Size: =21
+        Text: =Text(DatePickerProd.SelectedDate)
+        Visible: =false
+        Width: =54
+        X: =585
+        Y: =185
+        ZIndex: =18
+
+    DatePickerProd As datepicker:
+        Height: =70
+        PaddingBottom: =2
+        PaddingLeft: =2
+        PaddingRight: =2
+        PaddingTop: =2
+        Size: =24
+        Width: =220
+        X: =ComboBoxmaquina.X + ComboBoxmaquina.Width + 4
+        Y: =ComboBoxmaquina.Y
+        ZIndex: =19
 
